# liquid-rust

./: Cargo.toml  README.md  fixpoint  shell.nix
.github/workflows/: blank.yml  latex.yml  rust.yml
.liquid/: out.smt2
examples/: inc.rs  negation.rs  pos.lr  simple2.rs
liquid-rust-core-cli/src/: grammar.lalrpop  main.rs
liquid-rust-core/src/: freshen.rs  lib.rs  lower.rs  name_check.rs  names.rs  pretty.rs
liquid-rust-core/src/ast/: mod.rs  pred.rs  visitor.rs
liquid-rust-core/src/ty/: context.rs  mod.rs
liquid-rust-driver/src/: lib.rs  lower.rs  translate.rs
liquid-rust-parser/src/: ast.rs  grammar.lalrpop
liquid-rust-typeck/: Cargo.toml
liquid-rust-typeck/src/: constraint.rs  env.rs  lib.rs  refineck.rs  region_inference.rs  synth.rs
liquid-rust/src/: main.rs
src/: lib.rs  main.rs  smtlib2.rs  wf.rs
src/cps/: ast.rs  constraint.rs  mod.rs  parser.lalrpop  parser.rs  smt.rs
src/cps_ref/: ast.rs  constraint.rs  context.rs  liquid.rs  mod.rs  parser.lalrpop  parser.rs  smt.rs  subst.rs  translate.rs  typeck.rs
src/cps_ref/notes/: main.aux  main.dvi  main.fdb_latexmk  main.fls  main.tex
src/refinements/: dom_tree.rs  mod.rs  typeck.rs
src/syntax/: ast.rs  parser.lalrpop  parser.rs
